--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.7",
     "@tailwindcss/postcss": "^4.1.7",
     "axios": "^1.9.0",
     "cors": "^2.8.5",
