--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "mapbox-gl": "^3.12.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
